syntax = "proto3";

import "task.proto";
import "player.proto";
import "game.proto";

message Client {
  message Auth { string token = 1; }

  oneof message { Auth auth = 1; }
}

message Server {
  message Welcome {}
  message NewTask { Task task = 1; }
  message PlayerUpdated { Player player = 1; }
  message GameUpdated { Game game = 1; }

  oneof message {
    Welcome welcome = 1;
    NewTask newTask = 2;
    PlayerUpdated playerUpdated = 3;
    GameUpdated gameUpdated = 4;
  }
}
